--- a/css/styles.css
+++ b/css/styles.css
@@ -4,20 +4,20 @@
     --accent-color: #2196F3;
     --background-color: #E5E5E5;
 }
-
-body {
-    background-color: var(--background-color);
-    color: var(--main-color);
-    font-family: 'Roboto' sans-serif;
-    font-style: normal;
-}
 a {
     text-decoration: none;
 }
 .list {
     list-style: none;
 }
-.header{
+body {
+    background-color: var(--background-color);
+    color: var(--main-color);
+    font-family: 'Roboto' sans-serif;
+    font-style: normal;
+}
+
+.header {
     position: absolute;
     width: 1600px;
     height: 80px;
@@ -28,16 +28,26 @@ a {
 
     background-color: #FFFFFF;
 }
+
+
 .header-logo {
     position: absolute;
     width: 145px;
     height: 31px;
     left: 215px;
     top: 24px;
-        
+    
+    color: #000000;
+    
     font-family: 'Raleway', sans-serif;
     font-size: 26px;
 }
 .header-logo span {
     color: var(--accent-color);
+}
+
+.header-logo:hover,
+.header-logo:focus {
+    color: var(--accent-color);
+    text-decoration: underline;
 }
