--- a/css/styles.css
+++ b/css/styles.css
@@ -4,17 +4,20 @@
     --accent-color: #2196F3;
     --background-color: #E5E5E5;
 }
-a {
-    text-decoration: none;
-}
-.list {
-    list-style: none;
-}
+
 body {
     background-color: var(--background-color);
     color: var(--main-color);
     font-family: 'Roboto' sans-serif;
     font-style: normal;
+}
+
+.link {
+    text-decoration: none;
+}
+
+.list {
+    list-style: none;
 }
 
 .header {
