--- a/css/styles.css
+++ b/css/styles.css
@@ -7,7 +7,7 @@
 body {
     background-color: var(--background-color);
     color: var(--main-color);
-    font-family: 'Roboto' sans-serif;
+    font-family:  'Roboto', sans-serif;
     font-style: normal;
 }
 .link {
