--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,7 @@
     --accent-color: #2196F3;
     --background-color: #E5E5E5;
     --header-background-color: #FFFFFF;
+    --hero-text: #ffffff;
     --footer-background-color: #2F303A;
     --footer-main-text: #ffffff;
     --footer-second-text: rgba(255, 255, 255, 0.6);
@@ -22,6 +23,24 @@ body {
 }
 .btn {
     cursor: pointer;
+}
+.titel {
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+
+    color: var(--main-color);
+}
+.text {
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 1.71;
+    
+    letter-spacing: 0.03em;
+
+    color: var(--second-color);
 }
 .visually-hidden {
     position: absolute;
@@ -88,6 +107,41 @@ body {
 }
 /*main*/
 
+/*HERO*/
+.hero {
+    background-color: #2F303A;;
+}
+.hero-titel {
+    font-weight: 900;
+    font-size: 44px;
+    line-height: 1.36;
+    
+    text-align: center;
+    letter-spacing: 0.06em;
+    text-transform: uppercase;
+
+    color: var(--hero-text);
+}
+.hero-btn {
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.88;
+
+    display: flex;
+    align-items: center;
+    text-align: center;
+    letter-spacing: 0.06em;
+
+    color: var(--hero-text);
+    
+    background: var(--accent-color);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+}
+.hero-btn:hover,
+.hero-btn:focus {
+    text-decoration: underline var(--accent-color);
+}
 
 /*footer*/
 .footer {
@@ -108,7 +162,6 @@ body {
 
 .footer-logo:hover,
 .footer-logo:focus {
-    
     text-decoration: underline var(--accent-color);
 }
 .address {
