--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,7 @@
     --header-background-color: #FFFFFF;
     --hero-text: #ffffff;
     --specialty-background-color: #F5F5F5;
+    --team-background-color: #F5F4FA;
     --footer-background-color: #2F303A;
     --footer-main-text: #ffffff;
     --footer-second-text: rgba(255, 255, 255, 0.6);
@@ -163,7 +164,26 @@ body {
 }
 .specialty-text {
 }
+/*What do we do?*/
+.what-do {
+    background-color: var(--specialty-background-color);
+}
+/*Our team*/
+.team {
+    background-color: var(--team-background-color);
+}
+.team-main-titel {
+}
+.team-list {
+    background: #FFFFFF;
 
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 0px 0px 4px 4px;
+}
+.team-titel {
+}
+.team-text {
+}
 
 /*footer*/
 .footer {
