--- a/css/styles.css
+++ b/css/styles.css
@@ -211,7 +211,7 @@ body {
     font-weight: 400;
     font-size: 14px;
     line-height: 1.71;
-  
+    
     letter-spacing: 0.03em;
 
     color: var(--footer-main-text);
@@ -225,7 +225,7 @@ body {
     font-weight: 400;
     font-size: 14px;
     line-height: 1.71;
-   
+    
     letter-spacing: 0.03em;
 
     color: var(--footer-second-text);
@@ -234,4 +234,53 @@ body {
 .footer-cont:focus {
     
     text-decoration: underline var(--accent-color);
+}
+
+/*PORTFOLIO*/
+.example {
+    background-color: #eeeeee;
+}
+/*portfolio buttons*/
+.example-btn {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.62;
+    
+    text-align: center;
+    letter-spacing: 0.03em;
+
+    color: var(--main-color);
+}
+.example-btn:hover,
+.example-btn:focus {
+    text-decoration: underline var(--accent-color);
+}
+.example-btn:active {
+    color: #ffffff;
+    background-color: var(--accent-color);
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+}
+
+/*EXAMPLES*/
+
+.example-list {
+    background-color: #f5f5f5;
+}
+
+.example-art {
+    background-color: #ffffff;
+}
+.example-titel {
+    font-size: 18px;
+    line-height: 2;
+    
+    letter-spacing: 0.06em;
+}
+
+.example-text {
+    font-size: 16px;
+    line-height: 1.88;
+    
+
+    letter-spacing: 0.03em;
 }
