--- a/css/styles.css
+++ b/css/styles.css
@@ -12,10 +12,8 @@
     --footer-second-text: rgba(255, 255, 255, 0.6);
 }
 body {
-    background-color: var(--background-color);
-    color: var(--main-color);
+        color: var(--main-color);
     font-family:  'Roboto', sans-serif;
-    font-style: normal;
 }
 .link {
     text-decoration: none;
@@ -44,7 +42,6 @@ body {
     color: var(--main-color);
 }
 .text {
-    font-weight: 400;
     font-size: 14px;
     line-height: 1.71;
     
@@ -91,6 +88,7 @@ body {
     text-decoration: underline;
 }
 .main-nav-link {
+    font-weight: 500;
     font-size: 14px;
     line-height: 1.14;
     letter-spacing: 0.02em;
@@ -99,7 +97,7 @@ body {
 }
 .main-nav-link:hover,
 .main-nav-link:focus {
-    text-decoration: underline;
+    text-decoration: none;
 }
 .current {
     color: var(--accent-color);
@@ -133,13 +131,12 @@ body {
     color: var(--hero-text);
 }
 .hero-btn {
+    font-family: 'Roboto';
+    font-style: normal;
     font-weight: 700;
     font-size: 16px;
     line-height: 1.88;
-
-    display: flex;
-    align-items: center;
-    text-align: center;
+    
     letter-spacing: 0.06em;
 
     color: var(--hero-text);
@@ -155,7 +152,7 @@ body {
 
 /*specialty*/
 .specialty {
-    background-color: var(--specialty-background-color);
+    
 }
 .specialty-list {
 }
@@ -166,7 +163,6 @@ body {
 }
 /*What do we do?*/
 .what-do {
-    background-color: var(--specialty-background-color);
 }
 /*Our team*/
 .team {
@@ -175,14 +171,21 @@ body {
 .team-main-titel {
 }
 .team-list {
-    background: #FFFFFF;
+    
+}
+.team-item {
+    background-color: #FFFFFF;
 
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 0px 0px 4px 4px;
 }
 .team-titel {
+    font-size: 16px;
+    line-height: 1.19;
 }
 .team-text {
+    font-size: 16px;
+    line-height: 1.19;
 }
 
 /*footer*/
@@ -242,6 +245,7 @@ body {
 }
 /*portfolio buttons*/
 .example-btn {
+    font-family: inherit;
     font-weight: 500;
     font-size: 16px;
     line-height: 1.62;
