--- a/css/styles.css
+++ b/css/styles.css
@@ -103,6 +103,7 @@ body {
     color: var(--accent-color);
 }
 .conneсtion-nav-link {
+    font-weight: 500;
     font-size: 14px;
     line-height: 1.14;
     letter-spacing: 0.02em;
@@ -111,7 +112,7 @@ body {
 }
 .conneсtion-nav-link:hover,
 .conneсtion-nav-link:focus {
-    text-decoration: underline;
+    text-decoration: none;
 }
 /*main*/
 
@@ -131,8 +132,7 @@ body {
     color: var(--hero-text);
 }
 .hero-btn {
-    font-family: 'Roboto';
-    font-style: normal;
+    font-family: inherit;
     font-weight: 700;
     font-size: 16px;
     line-height: 1.88;
@@ -211,7 +211,6 @@ body {
 }
 .address {
     font-style: normal;
-    font-weight: 400;
     font-size: 14px;
     line-height: 1.71;
     
@@ -221,11 +220,10 @@ body {
 }
 .address:hover,
 .address:focus {
-    text-decoration: underline var(--accent-color);
+    text-decoration: none;
 }
 .footer-cont {
     font-style: normal;
-    font-weight: 400;
     font-size: 14px;
     line-height: 1.71;
     
@@ -236,12 +234,12 @@ body {
 .footer-cont:hover,
 .footer-cont:focus {
     
-    text-decoration: underline var(--accent-color);
+    text-decoration: none;
 }
 
 /*PORTFOLIO*/
 .example {
-    background-color: #eeeeee;
+
 }
 /*portfolio buttons*/
 .example-btn {
@@ -257,7 +255,7 @@ body {
 }
 .example-btn:hover,
 .example-btn:focus {
-    text-decoration: underline var(--accent-color);
+    text-decoration: none;
 }
 .example-btn:active {
     color: #ffffff;
@@ -268,7 +266,7 @@ body {
 /*EXAMPLES*/
 
 .example-list {
-    background-color: #f5f5f5;
+    
 }
 
 .example-art {
